# Copyright 2025 The OpenFst Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   Fst classes for representing linear models

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

#
# Libraries
#

# Top-level package. Depend on this for read-only access of Linear
# FSTs.
cc_library(
    name = "linear-fst",
    deps = [
        ":linear-classifier-fst",
        ":linear-fst-header",
        ":linear-tagger-fst",
        ":loglinear-apply",
    ],
)

# Top-level package. Depend on this for building Linear FSTs.
cc_library(
    name = "linear-fst-data-builder",
    hdrs = ["linear-fst-data-builder.h"],
    deps = [
        ":linear-fst-data",
        ":trie",
        "//openfst/lib",
        "//openfst/lib:symbol-table",
        "//openfst/lib:util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/types:span",
    ],
)

# Headers
cc_library(
    name = "loglinear-apply",
    hdrs = ["loglinear-apply.h"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:weight",
    ],
)

cc_library(
    name = "linear-fst-data",
    hdrs = ["linear-fst-data.h"],
    deps = [
        ":trie",
        "//openfst/lib",
        "//openfst/lib:util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
    ],
)

cc_library(
    name = "linear-fst-header",
    hdrs = ["linear-fst.h"],
    deps = [
        ":linear-fst-data",
        ":trie",
        "//openfst/extensions/pdt:collection",
        "//openfst/lib",
        "//openfst/lib:file-util",
        "//openfst/lib:symbol-table",
        "//openfst/lib:util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "trie",
    hdrs = ["trie.h"],
    deps = [
        "//openfst/compat:compat_memory",
        "//openfst/lib:util",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/memory",
    ],
)

# For building .so
cc_library(
    name = "linear-tagger-fst",
    srcs = ["linear-tagger-fst.cc"],
    deps = [
        ":linear-fst-header",
        "//openfst/lib",
        "//openfst/lib:register",
        "//openfst/lib:weight",
    ],
    alwayslink = 1,
)

cc_library(
    name = "linear-classifier-fst",
    srcs = ["linear-classifier-fst.cc"],
    deps = [
        ":linear-fst-header",
        "//openfst/lib",
        "//openfst/lib:register",
        "//openfst/lib:weight",
    ],
    alwayslink = 1,
)

cc_library(
    name = "script",
    srcs = ["linearscript.cc"],
    hdrs = ["linearscript.h"],
    deps = [
        ":linear-fst-data",
        ":linear-fst-data-builder",
        ":linear-fst-header",
        "//openfst/lib",
        "//openfst/lib:file-util",
        "//openfst/lib:symbol-table",
        "//openfst/lib:util",
        "//openfst/lib:weight",
        "//openfst/script",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
    ],
)

# Binaries.

cc_library(
    name = "fstlinear-main",
    srcs = ["fstlinear-main.cc"],
    deps = [
        ":linear-fst",
        ":script",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log:flags",
    ],
)

cc_library(
    name = "fstloglinearapply-main",
    srcs = ["fstloglinearapply-main.cc"],
    deps = [
        ":linear-fst",
        ":loglinear-apply",
        "//openfst/lib",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/flags:usage",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:flags",
    ],
)

cc_binary(
    name = "fstlinear",
    srcs = ["fstlinear.cc"],
    linkstatic = True,
    deps = [
        ":fstlinear-main",
        "@com_google_absl//absl/flags:flag",
    ],
)

cc_binary(
    name = "fstloglinearapply",
    srcs = ["fstloglinearapply.cc"],
    linkstatic = True,
    deps = [
        ":fstloglinearapply-main",
        "@com_google_absl//absl/flags:flag",
    ],
)

#
# Tests
#

cc_test(
    name = "linear-fst-data_test",
    size = "small",
    srcs = [
        "linear-fst-data_test.cc",
    ],
    linkstatic = True,
    deps = [
        ":linear-fst-data",
        ":linear-fst-data-builder",
        "//openfst/lib:lib_lite",
        "//openfst/lib:weight",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/log",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "linear-fst_test",
    size = "small",
    srcs = ["linear-fst_test.cc"],
    linkstatic = True,
    deps = [
        ":linear-fst",
        ":linear-fst-data-builder",
        ":linear-fst-header",
        "//openfst/lib",
        "//openfst/lib:symbol-table",
        "//openfst/lib:weight",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "trie_test",
    size = "small",
    srcs = ["trie_test.cc"],
    linkstatic = True,
    deps = [
        ":trie",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
