# Copyright 2026 The OpenFst Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Description:
#   Libraries for registering lookahead Fst types.

load("@//openfst/lib:build_rules.bzl", "fst_cc_library")

package(default_visibility = ["//visibility:public"])

#
# Libraries
#

fst_cc_library(
    name = "arc_lookahead-fst",
    srcs = ["arc_lookahead-fst.cc"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:register",
    ],
    alwayslink = 1,
)

fst_cc_library(
    name = "ilabel_lookahead-fst",
    srcs = ["ilabel_lookahead-fst.cc"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:register",
    ],
    alwayslink = 1,
)

fst_cc_library(
    name = "olabel_lookahead-fst",
    srcs = ["olabel_lookahead-fst.cc"],
    deps = [
        "//openfst/lib",
        "//openfst/lib:register",
    ],
    alwayslink = 1,
)
